# api-fast-api

./: LICENSE  README.md  pyproject.toml
api_pedidos/: api.py
test/: test_api.py
